# haxe-proj-template

./: .gitattributes  .gitignore  README.md
assets/: data.cdb
benchmark/: Run.bat  bench.hxproj  build.hxml
benchmark-fib/: Run.bat  bench.hxproj  build.hxml
benchmark-fib/src/: Ben.hx  Run.hx
benchmark/src/: GetInner.hx  Req.hx
chrome-extenson/: build.hxml  hello.hxproj
chrome-extenson/src/: Background.hx  Mt.hx  Options.hx  Popup.hx
cpp/: cpp.hxproj
cpp/src/: Main.hx
cppia/: Run.bat  cppia-bug.hxproj
cppia/src/: Main.hx
flash/: flash.hxproj
flash-air-webkit/: air.hxproj  app.xml  bundle.bat
flash-air-webkit/src/: Main.hx
flash-wave/: build.hxml  build.hxproj
flash-wave/src/: App.hx  Wave.flash.hx  Wave.hx  Wave.js.hx  import.hx
flash/src/: Main.hx
gba/0-first/: Makefile
gba/1-bitmap-mode3/: Makefile
gba/2-bitmap-mode4-pageflip/: Makefile
gcc/: Makefile
gcc/include/: fib.h
gcc/ndll/: CMakeLists.txt
gcc/src/: fib.c  main.c
heaps-base/: comp.hxml  comp.hxproj
heaps-base/src/: Data.hx  Game.hx  Texts.hx
hl-empty/: Run.bat  build.hxml  hl-empty.hxproj
hl-empty/src/: App.hx
hl-hdll/: .gitignore  CMakeLists.txt  Run.bat  build.hxml  build.hxproj
hl-hdll/mod/: mod.c
hl-hdll/src/: Main.hx
hl-heaps/: .gitignore  README.md  Run.bat  app.hxproj  build.hxml
hl-heaps/src/: App.hx
js-browser/: jss.hxproj
js-node/: Run.bat  js-node.hxproj
js-node/src/: Main.hx
js/js-browser/: build.hxml
js/js-canvas/: build.hxml  build.hxproj
mingw/hello/: Makefile  main.c
mix/: .gitignore  Makefile  build.hxml
mix/hss/: style.hss
mix/src/: Main.hx
ml-lex/: Makefile  README.md
ml-lex/src/: ast.ml  globals.ml
msvc/base/: .gitignore  base.vcxproj  base.vcxproj.filters
neko-empty/: Run.bat  empty.hxproj
neko-empty/src/: Main.hx
neko-multi-request/: Package  Run.bat  req.hxproj
neko-multi-request/src/: Request.hx
neko-native/src/: Foo.neko  Main.neko
neko-spod/src/: Main.hx
neko-web/: Run.bat  web.hxproj
neko-web/src/: Main.hx
neko/neko-native/: Makefile
neko/neko-spod/: Package.bat  spod.hxproj
nml/: Makefile
nml/non/: Some.nml
ocaml/: .gitignore  .merlin  Makefile  proj.sublime-workspace
ocaml-simple/: .gitignore  Makefile
ocaml-simple/src/: hello.ml
ocaml/src/: lexer.mll  main.ml  parser.mly
vs-detour-msgbox/: vs-hello.sln
vs-detour-msgbox/vs-hello/: stdafx.cpp  stdafx.h  vs-hello.cpp  (+2 more)
wast/: Makefile  build.hxml
(+62 files in other folders)
